G521, make sure the site is readable with inverted color preferences

--- a/html/hoogle.css
+++ b/html/hoogle.css
@@ -209,6 +209,7 @@ p {
     padding: 3px;
     width: 400px;
     border: 2px solid #cc0;
+    color: black;
     background-color: #F5F5F5;
     border: 1px solid #E5E5E5;
     text-align: left;
